--- a/CEAPS_TELEFONES.html
+++ b/CEAPS_TELEFONES.html
@@ -47,10 +47,10 @@
             <div class="text-center">
                 <h1 class="text-2xl md:text-3xl font-bold">
                     <i class="fas fa-hospital-alt mr-2"></i>
-                    DIRETORIA DE REGULAÇÃO EM SAÚDE
+                    DIRETORIA DE REGULAÇÃO DO ACESSO
                 </h1>
                 <p class="text-lg" style="color: #f0e5eb;">Contatos Telefônicos</p>
-                <p class="footer-credits">Página Criada por Ana P. A. Silva Matr:201704/Assistente Adm. Diretoria de Regulação em Saúde</p>
+                <p class="footer-credits">Página Criada por Ana P. A. Silva Matr:201704/Assistente Adm. Diretoria de Regulação do acesso</p>
             </div>
         </div>
     </header>
@@ -123,6 +123,8 @@
 </body>
 
 </html>
+
+
 
 
 
