--- a/DISTRITOS_CONTATOS.html
+++ b/DISTRITOS_CONTATOS.html
@@ -39,12 +39,12 @@
             <div class="text-center">
                 <h1 class="text-2xl md:text-3xl font-bold">
                     <i class="fas fa-map-marker-alt mr-2"></i>
-                    Diretoria de Regulação em Saúde
+                    Diretoria de Regulação do Acesso
                 </h1>
                 <p class="text-lg" style="color: #f0e5eb;">
                     Telefones/Distritos Sanitários de Saúde
                 </p>
-                <p class="footer-credits">Página Criada por Ana P. A. Silva Matr:201704/Assistente Adm. Diretoria de Regulação em Saúde</p>
+                <p class="footer-credits">Página Criada por Ana P. A. Silva Matr:201704/Assistente Adm. Diretoria de Regulação do acesso</p>
             </div>
         </div>
     </header>
@@ -65,5 +65,7 @@
 </body>
 
 </html>
+
+
 
 
