--- a/TELEFONES_IRIA_DINIZ.html
+++ b/TELEFONES_IRIA_DINIZ.html
@@ -84,8 +84,8 @@
                 <i class="fas fa-hospital-alt text-3xl mr-3"></i>
                 <h1 class="text-3xl font-bold">Contatos Telefônicos CCE Iria Diniz</h1>
             </div>
-            <p class="text-center text-sm opacity-90">Diretoria de Regulação em Saúde</p>
-            <p class="text-center text-xs opacity-75 mt-1">Página Criada por Ana P. A. Silva Matr:201704/Assistente Adm. Diretoria de Regulação em Saúde</p>
+            <p class="text-center text-sm opacity-90">Diretoria de Regulação do Acesso</p>
+            <p class="text-center text-xs opacity-75 mt-1">Página Criada por Ana P. A. Silva Matr:201704/Assistente Adm. Diretoria de Regulação do Acesso</p>
         </div>
     </header>
 
@@ -517,3 +517,5 @@
 
 </body>
 </html>
+
+
