--- a/UPA_TELEFONES.html
+++ b/UPA_TELEFONES.html
@@ -48,10 +48,10 @@
             <div class="text-center">
                 <h1 class="text-2xl md:text-3xl font-bold">
                     <i class="fas fa-ambulance mr-2"></i>
-                    Diretorira de Regulação em Saúde
+                    Diretorira de Regulação do Acesso
                 </h1>
                 <p class="text-lg" style="color: #f0e5eb;">UNIDADES DE PRONTO ATENDIMENTO (UPA)</p>
-                <p class="footer-credits">Página Criada por Ana P. A. Silva Matr:201704/Assistente Adm. Diretoria de Regulação em Saúde</p>
+                <p class="footer-credits">Página Criada por Ana P. A. Silva Matr:201704/Assistente Adm. Diretoria de Regulação do Acesso</p>
             </div>
         </div>
     </header>
@@ -69,5 +69,7 @@
 </body>
 
 </html>
+
+
 
 
