--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                         </a>
                         <a href="resumo_fluxos.html" class="link-button" target="_blank">
                             <i class="fas fa-file-alt"></i>
-                            <span>Resumo dos Fluxos/Especialidades</span>
+                            <span>Resumo dos Fluxos</span>
                         </a>
                         <a href="https://docs.google.com/spreadsheets/d/1rdG5GYB9tl57CUchHd_LMAO_qftSD_S4ySH5vernoTk/edit?gid=0#gid=0" class="link-button" target="_blank">
                             <i class="fas fa-list-ul"></i>
@@ -716,6 +716,7 @@
     </script>
 </body>
 </html>
+
 
 
 
